--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/hefesto/.netbeans/8.2/tomcat90.properties
+deploy.ant.properties.file=/home/mortein/.netbeans/8.2/tomcat90.properties
 j2ee.server.home=/opt/apache-tomcat-9.0.14
 j2ee.server.instance=tomcat90:home=/opt/apache-tomcat-9.0.14
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=/home/hefesto/.netbeans/8.2/build.properties
+user.properties.file=/home/mortein/.netbeans/8.2/build.properties
